rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__operation_report_sidebar_marks_both_stack_boundaries_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                ┌Create Directory Report───────────────────────┐                ",
        "                │┌──────────────────┐ Mark Soe Den Res.  Undo  │                ",
        "                ││  r:Rename        │ [x]  a.… b.… OK    ✓     │                ",
        "                ││* r:Create D…ctory│ [x]  c.… d.… Fail  *     │                ",
        "                ││* u:Create D…ctory│                          │                ",
        "                ││  u:Copy          │                          │                ",
        "                ││                  │                          │                ",
        "                ││                  │Details:                  │                ",
        "                ││                  │┌────────────────────────┐│                ",
        "                ││                  ││Source: a.txt           ││                ",
        "                ││                  ││Destination: b.txt      ││                ",
        "                ││                  ││Result: OK              ││                ",
        "                ││                  ││                        ││                ",
        "                ││                  ││Undo: Available         ││                ",
        "                ││                  │└────────────────────────┘│                ",
        "                │└──────────────────┘Space: toggle  a: all/none│                ",
        "                └──────────────────────────────────────────────┘                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 40, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 37, y: 5, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 63, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 7, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 36, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 37, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 37, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 37, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 36, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 37, y: 18, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
