rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__operation_report_undo_report_shows_redo_column_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "       ┌Undo Copy Report───────────────────────────────────────────────────────────────────────────────────────┐        ",
        "       │ Mark Source                                    Destination                                Res.  Redo  │        ",
        "       │ [x]  a.txt                                     b.txt                                      OK    ✓     │        ",
        "       │ [x]  c.txt                                     d.txt                                      Fail  *     │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │                                                                                                       │        ",
        "       │Details:                                                                                               │        ",
        "       │┌─────────────────────────────────────────────────────────────────────────────────────────────────────┐│        ",
        "       ││Source: a.txt                                                                                        ││        ",
        "       ││Destination: b.txt                                                                                   ││        ",
        "       ││Result: OK                                                                                           ││        ",
        "       ││                                                                                                     ││        ",
        "       ││Undo: Available                                                                                      ││        ",
        "       │└─────────────────────────────────────────────────────────────────────────────────────────────────────┘│        ",
        "       │Space: toggle  a: all/none  Enter: redo  Esc: close  ↑↓: select                                        │        ",
        "       └───────────────────────────────────────────────────────────────────────────────────────────────────────┘        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 24, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 111, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 29, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 30, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 31, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 32, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 8, y: 32, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 111, y: 32, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 33, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 112, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
